# pdm-helpers

./: .gitignore  README.md  packages_installer.py  pyproject.toml
data/: modules.txt
src/pdm_helpers/: a.ipynb  findpython.py  test_runner.py
